Fix bug with flex image on firefox

--- a/style.css
+++ b/style.css
@@ -1709,6 +1709,7 @@ input:focus + label {
 	}
 
 	.portfolio-page__image {
+		flex: 0 1 auto;
 		height: 37%;
 	}
 
